# hearding_game

./: Cargo.toml
assets/: player.gltf
src/: camera.rs  main.rs  player.rs  sheep.rs  world.rs
