[package]
name = "hearding_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#revert dynamic linking before releasing!
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.1"
bevy_asset_loader = "0.19.1"
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = "0.11.1"
bevy_rapier3d = "0.23.0"
bevy_third_person_camera = "0.1.8"


[profile.dev.package."*"]
opt-level = 3
